@@ -1,26 +1,16 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.search.fetch.subphase;
 
 import org.elasticsearch.Version;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.common.Nullable;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.document.DocumentField;
@@ -31,15 +21,18 @@ import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.index.mapper.MapperService;
 import org.elasticsearch.index.mapper.MapperServiceTestCase;
 import org.elasticsearch.index.mapper.ParsedDocument;
-import org.elasticsearch.index.query.QueryShardContext;
+import org.elasticsearch.index.query.SearchExecutionContext;
 import org.elasticsearch.search.lookup.SourceLookup;
 
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
 import static java.util.Collections.emptyMap;
+import static org.elasticsearch.common.xcontent.ObjectPath.eval;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasItems;
@@ -58,7 +51,7 @@ public class FieldFetcherTests extends MapperServiceTestCase {
         List<FieldAndFormat> fieldAndFormats = List.of(
             new FieldAndFormat("field", null),
             new FieldAndFormat("object.field", null));
-        Map<String, DocumentField> fields = fetchFields(mapperService, source, fieldAndFormats);
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, fieldAndFormats, null);
         assertThat(fields.size(), equalTo(2));
 
         DocumentField field = fields.get("field");
@@ -238,7 +231,8 @@ public class FieldFetcherTests extends MapperServiceTestCase {
 
         Map<String, DocumentField> fields = fetchFields(mapperService, source, List.of(
             new FieldAndFormat("field", null),
-            new FieldAndFormat("date_field", "yyyy/MM/dd")));
+            new FieldAndFormat("date_field", "yyyy/MM/dd")),
+            null);
         assertThat(fields.size(), equalTo(2));
 
         DocumentField field = fields.get("field");
@@ -393,21 +387,406 @@ public class FieldFetcherTests extends MapperServiceTestCase {
         }
     }
 
-    private static Map<String, DocumentField> fetchFields(MapperService mapperService, XContentBuilder source, String fieldPattern)
-        throws IOException {
+    public void testSimpleUnmappedFields() throws IOException {
+        MapperService mapperService = createMapperService();
 
-        List<FieldAndFormat> fields = List.of(new FieldAndFormat(fieldPattern, null));
-        return fetchFields(mapperService, source, fields);
+        XContentBuilder source = XContentFactory.jsonBuilder()
+            .startObject()
+                .field("unmapped_f1", "some text")
+                .field("unmapped_f2", "some text")
+                .field("unmapped_f3", "some text")
+                .field("something_else", "some text")
+                .nullField("null_value")
+                .startObject("object")
+                    .field("a", "foo")
+                .endObject()
+                .field("object.b", "bar")
+            .endObject();
+
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_f*", null, true), null);
+        assertThat(fields.size(), equalTo(3));
+        assertThat(fields.keySet(), containsInAnyOrder("unmapped_f1", "unmapped_f2", "unmapped_f3"));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("un*1", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        assertThat(fields.keySet(), containsInAnyOrder("unmapped_f1"));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("*thing*", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        assertThat(fields.keySet(), containsInAnyOrder("something_else"));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("null*", null, true), null);
+        assertThat(fields.size(), equalTo(0));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("object.a", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        assertEquals("foo", fields.get("object.a").getValues().get(0));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("object.b", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        assertEquals("bar", fields.get("object.b").getValues().get(0));
     }
 
-    private static Map<String, DocumentField> fetchFields(MapperService mapperService, XContentBuilder source, List<FieldAndFormat> fields)
+    public void testSimpleUnmappedArray() throws IOException {
+        MapperService mapperService = createMapperService();
+
+        XContentBuilder source = XContentFactory.jsonBuilder().startObject().array("unmapped_field", "foo", "bar").endObject();
+
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_field", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        assertThat(fields.keySet(), containsInAnyOrder("unmapped_field"));
+        DocumentField field = fields.get("unmapped_field");
+
+        assertThat(field.getValues().size(), equalTo(2));
+        assertThat(field.getValues(), hasItems("foo", "bar"));
+    }
+
+    public void testSimpleUnmappedArrayWithObjects() throws IOException {
+        MapperService mapperService = createMapperService();
+
+        XContentBuilder source = XContentFactory.jsonBuilder().startObject()
+            .startArray("unmapped_field")
+                .startObject()
+                    .field("f1", "a")
+                .endObject()
+                .startObject()
+                    .field("f2", "b")
+                .endObject()
+            .endArray()
+            .endObject();
+
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_field", null, true), null);
+        assertThat(fields.size(), equalTo(0));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_field.f*", null, true), null);
+        assertThat(fields.size(), equalTo(2));
+        assertThat(fields.get("unmapped_field.f1").getValue(), equalTo("a"));
+        assertThat(fields.get("unmapped_field.f2").getValue(), equalTo("b"));
+
+        source = XContentFactory.jsonBuilder().startObject()
+            .startArray("unmapped_field")
+                .startObject()
+                    .field("f1", "a")
+                    .array("f2", 1, 2)
+                    .array("f3", 1, 2)
+                .endObject()
+                .startObject()
+                    .field("f1", "b") // same field name, this should result in a list returned
+                    .array("f2", 3, 4)
+                    .array("f3", "foo")
+                .endObject()
+            .endArray()
+            .endObject();
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_field.f1", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        DocumentField field = fields.get("unmapped_field.f1");
+        assertThat(field.getValues().size(), equalTo(2));
+        assertThat(field.getValues(), hasItems("a", "b"));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_field.f2", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        field = fields.get("unmapped_field.f2");
+        assertThat(field.getValues().size(), equalTo(4));
+        assertThat(field.getValues(), hasItems(1, 2, 3, 4));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_field.f3", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        field = fields.get("unmapped_field.f3");
+        assertThat(field.getValues().size(), equalTo(3));
+        assertThat(field.getValues(), hasItems(1, 2, "foo"));
+    }
+
+    public void testNestedFields() throws IOException {
+        XContentBuilder mapping = XContentFactory.jsonBuilder().startObject()
+        .startObject("_doc")
+            .startObject("properties")
+              .startObject("f1")
+                .field("type", "keyword")
+              .endObject()
+              .startObject("obj")
+                .field("type", "nested")
+                .startObject("properties")
+                    .startObject("f2").field("type", "keyword").endObject()
+                    .startObject("f3").field("type", "keyword").endObject()
+                    .startObject("inner_nested")
+                        .field("type", "nested")
+                        .startObject("properties")
+                            .startObject("f4").field("type", "keyword").endObject()
+                        .endObject()
+                  .endObject()
+                .endObject()
+              .endObject()
+            .endObject()
+        .endObject()
+        .endObject();
+
+        MapperService mapperService = createMapperService(mapping);
+
+        XContentBuilder source = XContentFactory.jsonBuilder().startObject()
+            .field("f1", "value1")
+            .startArray("obj")
+              .startObject()
+                .field("f2", "value2a")
+                .startObject("inner_nested")
+                    .field("f4", "value4a")
+                .endObject()
+              .endObject()
+              .startObject()
+                .field("f2", "value2b")
+                .field("f3", "value3b")
+                .startObject("inner_nested")
+                    .field("f4", "value4b")
+                .endObject()
+              .endObject()
+            .endArray()
+          .endObject();
+
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, fieldAndFormatList("*", null, false), null);
+        assertEquals(2, fields.size());
+        assertThat(fields.keySet(), containsInAnyOrder("f1", "obj"));
+        assertEquals("value1", fields.get("f1").getValue());
+        List<Object> obj = fields.get("obj").getValues();
+        assertEquals(2, obj.size());
+        Object obj0 = obj.get(0);
+        assertEquals(2, ((Map<?,?>) obj0).size());
+        assertEquals("value2a", eval("f2.0", obj0));
+        assertNull(eval("f3", obj0));
+        assertEquals("value4a", eval("inner_nested.0.f4.0", obj0));
+
+        Object obj1 = obj.get(1);
+        assertEquals(3, ((Map<?,?>) obj1).size());
+        assertEquals("value2b", eval("f2.0", obj1));
+        assertEquals("value3b", eval("f3.0", obj1));
+        assertEquals("value4b", eval("inner_nested.0.f4.0", obj1));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("obj*", null, false), null);
+        assertEquals(1, fields.size());
+        assertThat(fields.keySet(), containsInAnyOrder("obj"));
+        obj = fields.get("obj").getValues();
+        assertEquals(2, ((Map<?, ?>) obj.get(0)).size());
+        obj0 = obj.get(0);
+        assertEquals(2, ((Map<?,?>) obj0).size());
+        assertEquals("value2a", eval("f2.0", obj0));
+        assertNull(eval("f3", obj0));
+        assertEquals("value4a", eval("inner_nested.0.f4.0", obj0));
+
+        obj1 = obj.get(1);
+        assertEquals(3, ((Map<?,?>) obj1).size());
+        assertEquals("value2b", eval("f2.0", obj1));
+        assertEquals("value3b", eval("f3.0", obj1));
+        assertEquals("value4b", eval("inner_nested.0.f4.0", obj1));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("obj*", null, false), null);
+        assertEquals(1, fields.size());
+        assertThat(fields.keySet(), containsInAnyOrder("obj"));
+        obj = fields.get("obj").getValues();
+        assertEquals(2, obj.size());
+        obj0 = obj.get(0);
+        assertEquals("value4a", eval("inner_nested.0.f4.0", obj0));
+        obj1 = obj.get(1);
+        assertEquals("value4b", eval("inner_nested.0.f4.0", obj1));
+    }
+
+    public void testUnmappedFieldsInsideObject() throws IOException {
+        XContentBuilder mapping = XContentFactory.jsonBuilder().startObject()
+            .startObject("_doc")
+            .startObject("properties")
+                .startObject("obj")
+                    .field("type", "object")
+                    .field("dynamic", "false")
+                    .startObject("properties")
+                        .startObject("f1").field("type", "keyword").endObject()
+                    .endObject()
+                .endObject()
+            .endObject()
+            .endObject()
+        .endObject();
+
+        MapperService mapperService = createMapperService(mapping);
+
+        XContentBuilder source = XContentFactory.jsonBuilder().startObject()
+            .field("obj.f1", "value1")
+            .field("obj.f2", "unmapped_value_f2")
+            .field("obj.innerObj.f3", "unmapped_value_f3")
+            .field("obj.innerObj.f4", "unmapped_value_f4")
+            .endObject();
+
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, fieldAndFormatList("*", null, false), null);
+
+        // without unmapped fields this should only return "obj.f1"
+        assertThat(fields.size(), equalTo(1));
+        assertThat(fields.keySet(), containsInAnyOrder("obj.f1"));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("*", null, true), null);
+        assertThat(fields.size(), equalTo(4));
+        assertThat(fields.keySet(), containsInAnyOrder("obj.f1", "obj.f2", "obj.innerObj.f3", "obj.innerObj.f4"));
+    }
+
+    public void testUnmappedFieldsInsideDisabledObject() throws IOException {
+        XContentBuilder mapping = XContentFactory.jsonBuilder().startObject()
+            .startObject("_doc")
+            .startObject("properties")
+                .startObject("obj")
+                    .field("type", "object")
+                    .field("enabled", "false")
+                .endObject()
+            .endObject()
+            .endObject()
+        .endObject();
+
+        MapperService mapperService = createMapperService(mapping);
+
+        XContentBuilder source = XContentFactory.jsonBuilder().startObject()
+            .startArray("obj")
+            .value("string_value")
+            .startObject()
+                .field("a", "b")
+            .endObject()
+            .startArray()
+                .value(1).value(2).value(3)
+            .endArray()
+            .endArray()
+        .endObject();
+
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, fieldAndFormatList("*", null, false), null);
+        // without unmapped fields this should return nothing
+        assertThat(fields.size(), equalTo(0));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("*", null, true), null);
+        assertThat(fields.size(), equalTo(2));
+        assertThat(fields.keySet(), containsInAnyOrder("obj", "obj.a"));
+
+        List<Object> obj = fields.get("obj").getValues();
+        assertEquals(4, obj.size());
+        assertThat(obj, hasItems("string_value", 1, 2, 3));
+
+        List<Object> innerObj = fields.get("obj.a").getValues();
+        assertEquals(1, innerObj.size());
+        assertEquals("b", fields.get("obj.a").getValue());
+    }
+
+    /**
+     * If a mapped field for some reason contains a "_source" value that is not returned by the
+     * mapped retrieval mechanism (e.g. because its malformed), we don't want to fetch it from _source.
+     */
+    public void testMappedFieldNotOverwritten() throws IOException {
+        XContentBuilder mapping = XContentFactory.jsonBuilder().startObject()
+            .startObject("_doc")
+            .startObject("properties")
+                .startObject("f1")
+                    .field("type", "integer")
+                    .field("ignore_malformed", "true")
+                .endObject()
+            .endObject()
+            .endObject()
+        .endObject();
+
+        MapperService mapperService = createMapperService(mapping);
+
+        XContentBuilder source = XContentFactory.jsonBuilder().startObject()
+            .field("f1", "malformed")
+            .endObject();
+
+        // this should not return a field bc. f1 is in the ignored fields
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, List.of(new FieldAndFormat("*", null, true)), Set.of("f1"));
+        assertThat(fields.size(), equalTo(0));
+
+        // and this should neither
+        fields = fetchFields(mapperService, source, List.of(new FieldAndFormat("*", null, true)), Set.of("f1"));
+        assertThat(fields.size(), equalTo(0));
+
+        fields = fetchFields(mapperService, source, List.of(new FieldAndFormat("f1", null, true)), Set.of("f1"));
+        assertThat(fields.size(), equalTo(0));
+
+        // check this also does not overwrite with arrays
+        source = XContentFactory.jsonBuilder().startObject()
+            .array("f1", "malformed")
+            .endObject();
+
+        fields = fetchFields(mapperService, source, List.of(new FieldAndFormat("f1", null, true)), Set.of("f1"));
+        assertThat(fields.size(), equalTo(0));
+    }
+
+    public void testUnmappedFieldsWildcard() throws IOException {
+        MapperService mapperService = createMapperService();
+
+        XContentBuilder source = XContentFactory.jsonBuilder().startObject()
+            .startObject("unmapped_object")
+                .field("a", "foo")
+                .field("b", "bar")
+            .endObject()
+            .endObject();
+
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_object", null, true), null);
+        assertThat(fields.size(), equalTo(0));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("unmap*object", null, true), null);
+        assertThat(fields.size(), equalTo(0));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_object.*", null, true), null);
+        assertThat(fields.size(), equalTo(2));
+        assertThat(fields.keySet(), containsInAnyOrder("unmapped_object.a", "unmapped_object.b"));
+
+        assertThat(fields.get("unmapped_object.a").getValue(), equalTo("foo"));
+        assertThat(fields.get("unmapped_object.b").getValue(), equalTo("bar"));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_object.a", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        assertThat(fields.get("unmapped_object.a").getValue(), equalTo("foo"));
+
+        fields = fetchFields(mapperService, source, fieldAndFormatList("unmapped_object.b", null, true), null);
+        assertThat(fields.size(), equalTo(1));
+        assertThat(fields.get("unmapped_object.b").getValue(), equalTo("bar"));
+    }
+
+    public void testLastFormatWins() throws IOException {
+        MapperService mapperService = createMapperService();
+
+        XContentBuilder source = XContentFactory.jsonBuilder().startObject()
+            .startArray("date_field")
+                .value("2011-11-11T11:11:11")
+                .value("2012-12-12T12:12:12")
+            .endArray()
+            .endObject();
+
+        List<FieldAndFormat> ff = new ArrayList<>();
+        ff.add(new FieldAndFormat("date_field", "year", false));
+        Map<String, DocumentField> fields = fetchFields(mapperService, source, ff, null);
+        assertThat(fields.size(), equalTo(1));
+        assertThat(fields.get("date_field").getValues().size(), equalTo(2));
+        assertThat(fields.get("date_field").getValues().get(0), equalTo("2011"));
+        assertThat(fields.get("date_field").getValues().get(1), equalTo("2012"));
+
+        ff.add(new FieldAndFormat("date_field", "hour", false));
+        fields = fetchFields(mapperService, source, ff, null);
+        assertThat(fields.size(), equalTo(1));
+        assertThat(fields.get("date_field").getValues().size(), equalTo(2));
+        assertThat(fields.get("date_field").getValues().get(0), equalTo("11"));
+        assertThat(fields.get("date_field").getValues().get(1), equalTo("12"));
+    }
+
+    private List<FieldAndFormat> fieldAndFormatList(String name, String format, boolean includeUnmapped) {
+        return Collections.singletonList(new FieldAndFormat(name, format, includeUnmapped));
+    }
+
+    private Map<String, DocumentField> fetchFields(MapperService mapperService, XContentBuilder source, String fieldPattern)
         throws IOException {
+        return fetchFields(mapperService, source, fieldAndFormatList(fieldPattern, null, false), null);
+    }
+
+    private static Map<String, DocumentField> fetchFields(
+        MapperService mapperService,
+        XContentBuilder source,
+        List<FieldAndFormat> fields,
+        @Nullable Set<String> ignoreFields
+    ) throws IOException {
 
         SourceLookup sourceLookup = new SourceLookup();
         sourceLookup.setSource(BytesReference.bytes(source));
 
-        FieldFetcher fieldFetcher = FieldFetcher.create(newQueryShardContext(mapperService), null, fields);
-        return fieldFetcher.fetch(sourceLookup, Set.of());
+        FieldFetcher fieldFetcher = FieldFetcher.create(newSearchExecutionContext(mapperService), fields);
+        return fieldFetcher.fetch(sourceLookup, ignoreFields != null ? ignoreFields : Collections.emptySet());
     }
 
     public MapperService createMapperService() throws IOException {
@@ -432,14 +811,33 @@ public class FieldFetcherTests extends MapperServiceTestCase {
         return createMapperService(mapping);
     }
 
-    private static QueryShardContext newQueryShardContext(MapperService mapperService) {
+    private static SearchExecutionContext newSearchExecutionContext(MapperService mapperService) {
         Settings settings = Settings.builder().put("index.version.created", Version.CURRENT)
             .put("index.number_of_shards", 1)
             .put("index.number_of_replicas", 0)
             .put(IndexMetadata.SETTING_INDEX_UUID, "uuid").build();
         IndexMetadata indexMetadata = new IndexMetadata.Builder("index").settings(settings).build();
         IndexSettings indexSettings = new IndexSettings(indexMetadata, settings);
-        return new QueryShardContext(0, indexSettings, null, null, null, mapperService, null, null, null, null, null, null, null, null,
-            null, null, null, emptyMap());
+        return new SearchExecutionContext(
+            0,
+            0,
+            indexSettings,
+            null,
+            null,
+            mapperService,
+            mapperService.mappingLookup(),
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            emptyMap()
+        );
     }
 }
